test/parse_error/p1_falta_FIN.remi
# --- tests/parse_error/p1_falta_FIN.remi ---
# Error de sintaxis: falta FIN en el if
SI 1 < 2
  IMPRIMIR "ok"
# FIN ausente aquí